--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/prih/awesome-package.git"
   },
   "author": "prih",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/prih/awesome-package/issues"
   },
