--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prih/awesome-package",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Awesome Package",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,7 +9,7 @@
     "format": "prettier --write \"src/**/*.(js|ts)\"",
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "eslint src --fix --ext .js,.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jest.config.js",
     "prepare": "npm run build"
   },
   "repository": {
@@ -23,10 +23,14 @@
   },
   "homepage": "https://github.com/prih/awesome-package#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.6.3",
+    "jest": "^29.7.0",
     "prettier": "^3.2.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
   "files": [
